--- a/app/src/main/res/layout-v16/play_screen.xml
+++ b/app/src/main/res/layout-v16/play_screen.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/back"
     android:orientation="vertical"
+    android:id="@+id/play"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
