--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@android:color/black"
         android:orientation="vertical"
+        android:id="@+id/main"
         tools:context="com.androidexample.musicapp.MainActivity">
 
 
